@@ -6,4 +6,3 @@ author              = Marcel Grünauer <marcel@cpan.org>
 author              = Mike Doherty <doherty@cpan.org>
 
 [@Author::DOHERTY]
-[InstallGuide]
